https://bugs.eclipse.org/bugs/show_bug.cgi?id=277373 - DBWS should support MTOM attachments - port over to 2.0.1