@@ -84,7 +84,7 @@ public class SqlToplevelType extends SqlTypeWithMethods {
         names.add(Util.PACKAGE_NAME);
         values.add(null);
         names.add(Util.DATA_LEVEL);
-        values.add(new Integer(0));
+        values.add(Integer.valueOf(0));
         if (m_methodFilter != null) {
             List<String> methodNames = m_methodFilter.getMethodNames();
             if (methodNames != null) {
@@ -106,15 +106,15 @@ public class SqlToplevelType extends SqlTypeWithMethods {
         if (methodNo == null) {
             iter = m_viewCache.getRows(ALL_ARGUMENTS, new String[0], new String[]{OWNER,
                 PACKAGE_NAME, PACKAGE_NAME, OBJECT_NAME, DATA_LEVEL,
-                POSITION}, new Object[]{schema, method, null, method, new Integer(0),
-                new Integer(0)}, new String[0]);
+                POSITION}, new Object[]{schema, method, null, method, Integer.valueOf(0),
+                Integer.valueOf(0)}, new String[0]);
 
         }
         else {
             iter = m_viewCache.getRows(ALL_ARGUMENTS, new String[0], new String[]{OWNER,
                 PACKAGE_NAME, PACKAGE_NAME, OBJECT_NAME, OVERLOAD,
                 DATA_LEVEL, POSITION}, new Object[]{schema, method, null, method,
-                methodNo, new Integer(0), new Integer(0)}, new String[0]);
+                methodNo, Integer.valueOf(0), Integer.valueOf(0)}, new String[0]);
         }
         return ResultInfo.getResultInfo(iter);
     }
@@ -125,7 +125,7 @@ public class SqlToplevelType extends SqlTypeWithMethods {
         if (methodNo == null) {
             iter = m_viewCache.getRows(ALL_ARGUMENTS, new String[0], new String[]{OWNER,
                 PACKAGE_NAME, PACKAGE_NAME, OBJECT_NAME, DATA_LEVEL,
-                ARGUMENT_NAME}, new Object[]{schema, method, null, method, new Integer(0),
+                ARGUMENT_NAME}, new Object[]{schema, method, null, method, Integer.valueOf(0),
                 NOT_NULL}, new String[]{POSITION});
 
         }
@@ -133,7 +133,7 @@ public class SqlToplevelType extends SqlTypeWithMethods {
             iter = m_viewCache.getRows(ALL_ARGUMENTS, new String[0], new String[]{OWNER,
                 PACKAGE_NAME, PACKAGE_NAME, OBJECT_NAME, OVERLOAD,
                 DATA_LEVEL, ARGUMENT_NAME}, new Object[]{schema, method, null, method,
-                methodNo, new Integer(0), NOT_NULL}, new String[]{POSITION});
+                methodNo, Integer.valueOf(0), NOT_NULL}, new String[]{POSITION});
         }
         return ParamInfo.getParamInfo(iter);
     }
